Tidied up and fixed error in combine nb

--- a/Labs/CombineData.ipynb
+++ b/Labs/CombineData.ipynb
@@ -16,12 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "46efe0f8-d86e-472f-a364-42842692caa2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#will be using pandas to reda in the csv files and tidy up the data for a new combined dataframe\n",
+    "#will be using pandas to read in the csv files and tidy up the data for a new combined dataframe\n",
     "import pandas as pd"
    ]
   },
@@ -37,18 +37,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "ecd1c248-4ef8-43de-84e8-b387921cc1d3",
    "metadata": {},
    "outputs": [],
    "source": [
     "#read in the 2019 csv file to a dataframe\n",
-    "df2019 = pd.read_csv(\"data/cao-2019.csv\")"
+    "df2019 = pd.read_csv(\"../data/cao-2019.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "5d6e669f-2971-405f-bfd9-6f74d60d81f3",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
        "4  329  442  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "b6a52ab1-1c2a-493e-a402-4444b8ff33b4",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "410f8421-57ba-43fa-9b06-8c49fee91ce7",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "1f519bf9-8c12-451c-b604-4906626557bf",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
        "5  5       AL810                                 Quantity Surveying  307  349"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "16e7c65b-bbfb-454f-bc60-dbc16d393b9e",
    "metadata": {},
    "outputs": [
@@ -298,11 +298,11 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Not needed</th>\n",
-       "      <th>Code</th>\n",
-       "      <th>Course</th>\n",
-       "      <th>Round1</th>\n",
-       "      <th>Round2</th>\n",
+       "      <th>0</th>\n",
+       "      <th>Course Code</th>\n",
+       "      <th>INSTITUTION and COURSE</th>\n",
+       "      <th>EOS</th>\n",
+       "      <th>Mid</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -351,22 +351,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   Not needed   Code                                             Course  \\\n",
-       "1           1  AL801    Software Design with Virtual Reality and Gaming   \n",
-       "2           2  AL802               Software Design with Cloud Computing   \n",
-       "3           3  AL803  Software Design with Mobile Apps and Connected...   \n",
-       "4           4  AL805        Network Management and Cloud Infrastructure   \n",
-       "5           5  AL810                                 Quantity Surveying   \n",
-       "\n",
-       "  Round1 Round2  \n",
-       "1    304    328  \n",
-       "2    301    306  \n",
-       "3    309    337  \n",
-       "4    329    442  \n",
-       "5    307    349  "
+       "0  0 Course Code                             INSTITUTION and COURSE  EOS  Mid\n",
+       "1  1       AL801    Software Design with Virtual Reality and Gaming  304  328\n",
+       "2  2       AL802               Software Design with Cloud Computing  301  306\n",
+       "3  3       AL803  Software Design with Mobile Apps and Connected...  309  337\n",
+       "4  4       AL805        Network Management and Cloud Infrastructure  329  442\n",
+       "5  5       AL810                                 Quantity Surveying  307  349"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,22 +371,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "id": "46413282-362a-40aa-a2c5-9cfb337cd54e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Not needed    930\n",
-       "Code          930\n",
-       "Course        930\n",
-       "Round1        926\n",
-       "Round2        915\n",
+       "0\n",
+       "0                         930\n",
+       "Course Code               930\n",
+       "INSTITUTION and COURSE    930\n",
+       "EOS                       926\n",
+       "Mid                       915\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,6 +395,17 @@
    "source": [
     "#count the number of courses\n",
     "df2019.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a4a91da0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#renaming columns for consistency with other years\n",
+    "df2019.columns=['Not Needed','Code','Course','Round1','Round2']"
    ]
   },
   {
@@ -423,18 +428,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "de1ed070-a005-47d6-b717-2df7adf61529",
    "metadata": {},
    "outputs": [],
    "source": [
     "#read in the 2020 csv file to a dataframe\n",
-    "df2020 = pd.read_csv(\"data/cao-2020.csv\")"
+    "df2020 = pd.read_csv(\"../data/cao-2020.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "ab90199f-3013-4966-b5c0-ed7aa1c65362",
    "metadata": {},
    "outputs": [
@@ -533,7 +538,7 @@
        "4  #+matric       NaN      8  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "52bbe9d3-6d54-4ceb-a0a2-0bfd5a645a1d",
    "metadata": {},
    "outputs": [],
@@ -556,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "df316499-be1a-4119-b25f-d10ad6cd2d38",
    "metadata": {},
    "outputs": [],
@@ -567,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "id": "98f3da04-872f-4754-855f-818193bc1869",
    "metadata": {},
    "outputs": [
@@ -583,7 +588,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "37a01994-c20c-44e5-b343-8c7070c562f3",
    "metadata": {},
    "outputs": [
@@ -694,7 +699,7 @@
        "4  #+matric    NaN      8  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,18 +729,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "id": "60af541e-09a2-48d3-a53d-d9d2a3b7cdc6",
    "metadata": {},
    "outputs": [],
    "source": [
     "#read in the 2021 csv file to a dataframe\n",
-    "df2021 = pd.read_csv(\"data/cao-2021.csv\")"
+    "df2021 = pd.read_csv(\"../data/cao-2021.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "id": "909a1c46-fe1a-4010-b500-3bfe81c83b4e",
    "metadata": {},
    "outputs": [
@@ -815,7 +820,7 @@
        "4  AL810  Quantity Surveying                            ...    328       "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "id": "1e965991-a61a-4c8a-a781-6200d9ef3ddf",
    "metadata": {},
    "outputs": [],
@@ -838,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "id": "faed3dc7-a73c-4028-887f-9f5ded2960bb",
    "metadata": {},
    "outputs": [
@@ -918,7 +923,7 @@
        "4  AL810  Quantity Surveying                            ...    328       "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -929,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "id": "956c5d49-d12d-49c8-8ddb-02ffe974052d",
    "metadata": {},
    "outputs": [
@@ -943,7 +948,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,17 +967,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "id": "9e8ec0d7-70f4-4e40-adf6-e1e8f82f6dff",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Code</th>\n",
+       "      <th>Course</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AL801</td>\n",
+       "      <td>Software Design with Virtual Reality and Gaming</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AL802</td>\n",
+       "      <td>Software Design with Cloud Computing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AL803</td>\n",
+       "      <td>Software Design with Mobile Apps and Connected...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AL805</td>\n",
+       "      <td>Network Management and Cloud Infrastructure</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>AL810</td>\n",
+       "      <td>Quantity Surveying</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>926</th>\n",
+       "      <td>WD200</td>\n",
+       "      <td>Arts (options)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>927</th>\n",
+       "      <td>WD210</td>\n",
+       "      <td>Software Systems Development</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>928</th>\n",
+       "      <td>WD211</td>\n",
+       "      <td>Creative Computing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>929</th>\n",
+       "      <td>WD212</td>\n",
+       "      <td>Recreation and Sport Management</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>930</th>\n",
+       "      <td>WD230</td>\n",
+       "      <td>Mechanical and Manufacturing Engineering</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>930 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Code                                             Course\n",
+       "1    AL801    Software Design with Virtual Reality and Gaming\n",
+       "2    AL802               Software Design with Cloud Computing\n",
+       "3    AL803  Software Design with Mobile Apps and Connected...\n",
+       "4    AL805        Network Management and Cloud Infrastructure\n",
+       "5    AL810                                 Quantity Surveying\n",
+       "..     ...                                                ...\n",
+       "926  WD200                                     Arts (options)\n",
+       "927  WD210                       Software Systems Development\n",
+       "928  WD211                                 Creative Computing\n",
+       "929  WD212                    Recreation and Sport Management\n",
+       "930  WD230           Mechanical and Manufacturing Engineering\n",
+       "\n",
+       "[930 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#df2019.loc[:,['Code','Course']]"
+    "#\n",
+    "df2019.loc[:,['Code','Course']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "id": "bf844e92-3ae0-4b7d-9096-2fe08dbd88ad",
    "metadata": {},
    "outputs": [],
@@ -983,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 23,
    "id": "35eae353-091c-4793-b5c0-1fa1e97a2db2",
    "metadata": {},
    "outputs": [
@@ -1002,7 +1116,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1015,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 24,
    "id": "a7fc0790-99e0-4bcb-8487-02cc8575124d",
    "metadata": {},
    "outputs": [
@@ -1083,7 +1197,7 @@
        "4  AL810                                 Quantity Surveying"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1095,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 25,
    "id": "d8fcf3af-52db-4f08-9e1a-92dfcba5bb67",
    "metadata": {},
    "outputs": [
@@ -1202,7 +1316,7 @@
        "[2906 rows x 2 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1214,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "f33f68d3-b761-406d-ac66-cef0a9070121",
    "metadata": {},
    "outputs": [],
@@ -1224,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 27,
    "id": "511bf861-d34f-4486-b3b1-2ee14cdc4e6a",
    "metadata": {},
    "outputs": [
@@ -1245,7 +1359,7 @@
        "Length: 2906, dtype: bool"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1257,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 28,
    "id": "0ce448dd-802a-459c-b6cd-0ceffcc7325c",
    "metadata": {},
    "outputs": [
@@ -1267,7 +1381,7 @@
        "1692"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1279,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 29,
    "id": "14c97b5a-20af-4330-911e-59a2dfc4f8a8",
    "metadata": {},
    "outputs": [],
@@ -1290,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 30,
    "id": "c601e784-1cc5-45ab-a987-b09a26a7d166",
    "metadata": {},
    "outputs": [
@@ -1358,7 +1472,7 @@
        "4  AL810                                 Quantity Surveying"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1369,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 31,
    "id": "b7acf7a3-4780-4c98-9387-cad2dcc6adfd",
    "metadata": {},
    "outputs": [
@@ -1381,7 +1495,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1392,7 +1506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 32,
    "id": "9222fe0b-4c37-4963-b5d6-15492c10c9bc",
    "metadata": {},
    "outputs": [
@@ -1499,7 +1613,7 @@
        "[1214 rows x 2 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
