added state vs oo section (figures,axes) to pyplot notebook

--- a/cao.ipynb
+++ b/cao.ipynb
@@ -100,7 +100,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data/Cao_2021_20211220_174101.html\n"
+      "data/Cao_2021_20211220_175514.html\n"
      ]
     }
    ],
@@ -4841,16 +4841,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "6cebf7aa-f77c-4e50-a0cf-96348fdedfc4",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "878"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfAllYears.Course.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "48675fa7-0eb7-41b0-9e12-4a4869acb206",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dfAllYears.to_csv('data/cao-AllYears.csv',sep=',',encoding='utf-8')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48675fa7-0eb7-41b0-9e12-4a4869acb206",
+   "id": "9d46ee1e-d40d-4c72-a75c-71ec43045406",
    "metadata": {},
    "outputs": [],
    "source": []
