Saving pyplot and cao notebooks

--- a/cao.ipynb
+++ b/cao.ipynb
@@ -4871,12 +4871,201 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9d46ee1e-d40d-4c72-a75c-71ec43045406",
+   "cell_type": "markdown",
+   "id": "691855b8-b5d3-417d-bf34-66e96b51bf40",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The course titles are inconsistent across institutions so I am setting up some keywords within categories to try and define some disciplines based on the course title, this will aid in groupings later on"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "05adcff7-bbe2-4a0d-b4a8-54009b967d42",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Services\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Disciplines and Keywords\n",
+    "Construction=[\"Construction\",\"Civil Engineering\",\"Architecture\",\"Architectural\", \"Estate\",\"Agency\", \"Valuation\", \"Planning\",\"Quantity\"]\n",
+    "Engineering=[\"Electrical\", \"Electronic\",\"Food\",\"Agriculture\",\"Mechanical\",\"Chemical\",\"Process\",\"Engineering\"]\n",
+    "Computing=[\"IT\",\"Computer\",\"Information\",\"Software\", \"Development\",\"Games\",\"Programming\",\"Computing\",\"Analytics\",\"Cloud\",\"Network\",\"Business Information Systems\"]\n",
+    "Science=[\"Science\",\"Biology\",\"Biotechnology\",\"Chemistry\",\"Pharmaceutical\",\"Physics\",\"Astronomy\",\"Mathematics\",\"Forensics\"]\n",
+    "Healthcare=[\"Therapy\",\"Biomedical\",\"Radiography\",\"Nursing\",\"Medicine\",\"Dentistry\",\"Health\",\"Midwifery\",\"Pharmacy\",\"Counselling\",\"Psychology\",\"Physiotherapy\"]\n",
+    "Arts_and_Humanities=[\"Art\",\"Languages\",\"Social\",\"Arts\",\"Cultural\",\"French\",\"German\",\"Russian\",\"Spanish\",\"Italian\",\"Philosophy\",\"Political\",\"Economics\",\"Sociology\",\"English\"\n",
+    ",\"Music\",\"Film\",\"Television\",\"Stage\",\"TV\",\"Media\",\"Drama\"]\n",
+    "Business_and_Law=[\"Finance\",\"Business\",\"Marketing\",\"Law\",\"Commerce\",\"Accounting\",\"Actuarial\",\"Criminology\",\"Justice\"]\n",
+    "Services=[\"Tourism\",\"Hotel\",\"Catering\",\"Culinary\",\"Bar\",\"Event\",\"Hospitality\"]\n",
+    "Education=[\"Education\",\"Teaching\",\"Coaching\"]\n",
+    "\n",
+    "#function to examine course title and assign it to a discipline\n",
+    "def discipline(title):\n",
+    "    if any(x in title for x in Construction):\n",
+    "        return \"Construction\"\n",
+    "    elif any(x in title for x in Engineering):\n",
+    "        return \"Engineering\"\n",
+    "    elif any(x in title for x in Computing):\n",
+    "        return \"Computing\"\n",
+    "    elif any(x in title for x in Science):\n",
+    "        return \"Science\"\n",
+    "    elif any(x in title for x in Healthcare):\n",
+    "        return \"Healthcare\"\n",
+    "    elif any(x in title for x in Arts_and_Humanities):\n",
+    "        return \"Arts_and_Humanities\"\n",
+    "    elif any(x in title for x in Business_and_Law):\n",
+    "        return \"Business_and_Law\"\n",
+    "    elif any(x in title for x in Services):\n",
+    "        return \"Services\"\n",
+    "    elif any(x in title for x in Education):\n",
+    "        return \"Education\"\n",
+    "    else:\n",
+    "        return 'Other'\n",
+    "    \n",
+    "#test it out\n",
+    "print(discipline(\"Tourism and Event Management (Wexford)\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e87be356-a3eb-4094-a010-4201572e80bc",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Code</th>\n",
+       "      <th>Course</th>\n",
+       "      <th>Round1_x</th>\n",
+       "      <th>Round2_x</th>\n",
+       "      <th>Round1_y</th>\n",
+       "      <th>Round2_y</th>\n",
+       "      <th>Round1</th>\n",
+       "      <th>Round2</th>\n",
+       "      <th>Discipline</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AL801</td>\n",
+       "      <td>Software Design with Virtual Reality and Gaming</td>\n",
+       "      <td>304</td>\n",
+       "      <td>328</td>\n",
+       "      <td>303.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td></td>\n",
+       "      <td>Computing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AL802</td>\n",
+       "      <td>Software Design with Cloud Computing</td>\n",
+       "      <td>301</td>\n",
+       "      <td>306</td>\n",
+       "      <td>332.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>313.0</td>\n",
+       "      <td></td>\n",
+       "      <td>Computing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AL803</td>\n",
+       "      <td>Software Design with Mobile Apps and Connected...</td>\n",
+       "      <td>309</td>\n",
+       "      <td>337</td>\n",
+       "      <td>337.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>350.0</td>\n",
+       "      <td></td>\n",
+       "      <td>Computing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AL805</td>\n",
+       "      <td>Network Management and Cloud Infrastructure</td>\n",
+       "      <td>329</td>\n",
+       "      <td>442</td>\n",
+       "      <td>333.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>321.0</td>\n",
+       "      <td></td>\n",
+       "      <td>Computing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AL810</td>\n",
+       "      <td>Quantity Surveying</td>\n",
+       "      <td>307</td>\n",
+       "      <td>349</td>\n",
+       "      <td>319.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>328.0</td>\n",
+       "      <td></td>\n",
+       "      <td>Construction</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Code                                             Course Round1_x Round2_x  \\\n",
+       "0  AL801    Software Design with Virtual Reality and Gaming      304      328   \n",
+       "1  AL802               Software Design with Cloud Computing      301      306   \n",
+       "2  AL803  Software Design with Mobile Apps and Connected...      309      337   \n",
+       "3  AL805        Network Management and Cloud Infrastructure      329      442   \n",
+       "4  AL810                                 Quantity Surveying      307      349   \n",
+       "\n",
+       "   Round1_y Round2_y  Round1 Round2    Discipline  \n",
+       "0     303.0      NaN   300.0            Computing  \n",
+       "1     332.0      NaN   313.0            Computing  \n",
+       "2     337.0      NaN   350.0            Computing  \n",
+       "3     333.0      NaN   321.0            Computing  \n",
+       "4     319.0      NaN   328.0         Construction  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#assign a discipline according to course title and add it as a new column to the dataframe\n",
+    "df = pd.read_csv(\"data/cao-AllYears.csv\") \n",
+    "df['Discipline'] = df['Course'].apply(discipline)\n",
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
